# weatherah

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: Cargo.toml
apps/api/migrations/: 001_initial.sql
apps/api/src/: main.rs
apps/api/src/handlers/: mod.rs  weather.rs  websocket.rs
apps/api/src/models/: weather.rs
apps/api/src/services/: database.rs  forecast_service.rs  mod.rs  weather_service.rs
apps/api/src/utils/: error.rs
apps/web/: next.config.js  package.json
